Fix spacing with inline-block

--- a/css/app.css
+++ b/css/app.css
@@ -21,6 +21,7 @@ body {
   line-height: 54px;
   text-align: center;
   position: relative;
+  display: inline-block;
 }
 
 .restaurant {
@@ -30,10 +31,6 @@ body {
   border: 3px solid #ccc69c;
   line-height: 56px;
 }
-
-  .floor .restaurant {
-    float: left;
-  }
 
 .shaft {
   height: 60px;
@@ -45,6 +42,7 @@ body {
 }
 
   .floor .shaft {
+    display: inline-block;
     position: relative;
     float: none;
   }
